--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
-    "require": {
-        "phpoffice/phpspreadsheet": "^1.29",
-        "vlucas/phpdotenv": "^5.6",
-        "endroid/qr-code": "^4.6",
-        "simplesoftwareio/simple-qrcode": "^4.2"
-    }
+  "require": {
+    "phpoffice/phpspreadsheet": "^1.29",
+    "vlucas/phpdotenv": "^5.6",
+    "endroid/qr-code": "^4.6",
+    "simplesoftwareio/simple-qrcode": "^4.2",
+    "firebase/php-jwt": "^6.10"
+  }
 }
