--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "vlucas/phpdotenv": "^5.6",
     "endroid/qr-code": "^4.6",
     "simplesoftwareio/simple-qrcode": "^4.2",
-    "firebase/php-jwt": "^6.10"
+    "firebase/php-jwt": "^6.10",
+    "smalot/pdfparser": "^2.8"
   }
 }
