feat: add REKAP PER CABANG sheet, optimize memory & redirect
- proses_delin.php: add sheet6 REKAP PER CABANG (per cabang summary)
- proses_delin_reg.php: add sheet6 REKAP PER CABANG with BALANCE SEBELUM col, fix redirect (iframe download + setTimeout back)
- delin_reg.php: pass from=menuBack param for redirect, ReadFilter (cols B-AI), memory_limit=-1, gc between files
- cek_par.php: CekParReadFilter (cols B-AH), memory_limit=-1, gc between files
- analisa_delin_reg.php: AnalisaRegReadFilter (cols B-AK), memory_limit=-1
- .gitignore: ignore FILE/uploaded & generated folders, logs, uploads/

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 .env
 api/temp/
 php_error.log
+*.log
+
+# Uploaded & generated files
+FILE/CEK_PAR_REGIONAL/
+FILE/ANALISA_REG/
+FILE/1770*/
+FILE/*.xlsx
+FILE/*.xls
+
+# Uploaded files (tmp/uploads)
+uploads/
